# document_manager

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
backend/: .gitignore  Dockerfile  Makefile  entrypoint.sh  manage.py  pyproject.toml
backend/document/: factories.py  models.py  serializers.py  views.py
backend/document/migrations/: 0001_initial.py  0002_alter_document_content.py  0003_document_folder.py
backend/document/tests/: test_models.py
backend/folder/: factories.py  models.py  serializers.py  views.py
backend/folder/migrations/: 0001_initial.py
backend/setup/: settings.py  urls.py
backend/user/: serializers.py
backend/utils/: permissions.py
backend/utils/management/commands/: populate_fake_database.py
document/: admin.py  factories.py  models.py  serializers.py  views.py
document/migrations/: 0001_initial.py  0002_alter_document_content.py  0002_alter_document_created_at.py  0003_document_folder.py
document/tests/: test_models.py
folder/: apps.py  factories.py  models.py  serializers.py  views.py
folder/migrations/: 0001_initial.py
setup/: asgi.py  settings.py  urls.py  wsgi.py
user/: serializers.py  views.py
utils/: tools.py
utils/management/commands/: populate_fake_database.py
